# learn-opengl

./: .gitignore  .gitmodules  CMakeLists.txt
core/: CMakeLists.txt
core/src/: graphics.h
core/src/core_renderer/: hello.cpp  hello.h
sandbox/: CMakeLists.txt
sandbox/src/sandbox/: main.cpp
